tests/parser/bug_75/cat.m.out
In cat.m, line 6
|             self.meow@potato.kitten;
|                      ^ error: expected end of statement, found AT instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
